--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -1,13 +1,22 @@
+body {
+background-image: url(/Blog-Trees/pics/socotrasunset.jpg);
+background-size: cover;
+background-repeat: no-repeat;
+background-size: 100% 100vh;
+
+}
+
+
+
 .card {
     display: block;
-    background-color:#1c9c49;;
-    border: 1px solid #eceff1;
     border-radius: 8px;
     box-shadow: rgba(60, 64, 67, 0.3) 0 1px 2px 0,
       rgba(60, 64, 67, 0.15) 0 1px 3px 1px;
     margin: 40px auto;
     padding: 20px;
-    width: 60vw;
+    width: 30vw;
+    text-align: left;
   }
 
 .input-group {
@@ -30,5 +39,12 @@ button {
     transition-property: background-color;
     transition-timing-function: linear;
     margin-top: 0.6em;
-    float: center;
+    float: right;
   }
+
+  /* .navbar {
+    width: 100%;
+    height: 80px;
+    background-color: black;
+
+  } */ 
