--- a/Assets/blog.css
+++ b/Assets/blog.css
@@ -21,6 +21,7 @@ align-items: center;
 justify-content: space-between;
 padding: 5px;
 float: right;
+position: relative;
 
 }
 
@@ -33,5 +34,30 @@ float: right;
 }
 
 .ball {
-    
+    background-color: #fff;
+    position: absolute;
+    height: 22px;
+    width: 22px;
+    top: 2px;
+    left: 2px;
+    border-radius: 50%;
+    transition: transform 0.2s linear;
+
+
 }
+
+.checkbox {
+  float: right;
+  opacity: 0;
+  position: absolute;
+}
+
+.checkbox:checked + .label .ball {
+
+  transform: translateX(24px);
+}
+
+body.dark {
+ background-color: #292c35; 
+}
+
