updated css and added back button to blog page

--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -1,66 +1,76 @@
 body {
-background-image: url(/Blog-Trees/pics/silhouette-of-nature-landscape-mountains-forest-in-background-blue-and-green-illustration-free-vector.jpg);
-background-size: cover;
-background-repeat: no-repeat;
-background-size: 100% 100vh;
-
-}
-
-
-
-.card {
-    /* display: block;
-    border-radius: 8px;
-    box-shadow: rgba(60, 64, 67, 0.3) 0 1px 2px 0,
-      rgba(60, 64, 67, 0.15) 0 1px 3px 1px;
-    margin: 40px auto;
-    padding: 20px;
-    width: 30vw;
-    text-align: left; */
-    
-      position: relative; 
-      width: 330px;
-      height: 370px;
-      background: #1c1c1c;
+  background-image: url(/Blog-Trees/pics/silhouette-of-nature-landscape-mountains-forest-in-background-blue-and-green-illustration-free-vector.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: 100% 100vh;
+  
+  }
+  
+  
+  
+  .card {
+      /* display: block;
       border-radius: 8px;
-      top: 50%;
-      left: 40%;
-      display: flex;
-      overflow: hidden;
-   
+      box-shadow: rgba(60, 64, 67, 0.3) 0 1px 2px 0,
+        rgba(60, 64, 67, 0.15) 0 1px 3px 1px;
+      margin: 40px auto;
+      padding: 20px;
+      width: 30vw;
+      text-align: left; */
+      
+        position: relative; 
+        width: 330px;
+        height: 370px;
+        background: #1c1c1c;
+        border-radius: 8px;
+        top: 150px;
+        left: 40%;
+        overflow: hidden;
+     
+  
+    }
+   h1 {
+    color: #8BC34A;
+     position: relative;
+     left: 40px;
+     
+     
+   } 
 
-  }
- h1 {
-  color: #fff;
- } 
-
-.input-group {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    color:#fff
-  }
-
-button {
-    background-color: #111213;
-    border-radius: 8px;
-    color: #fff;
-    cursor: pointer;
-    font-size: 1.2em;
-    letter-spacing: 0.21px;
-    line-height: 16px;
-    max-width: 255px;
-    padding: 20px 52px;
-    text-align: center;
-    transition-duration: 0.15s;
-    transition-property: background-color;
-    transition-timing-function: linear;
-    margin-top: 0.6em;
-    float: right;
-  }
-
-  /* .navbar {
-    width: 100%;
-    height: 80px;
-    background-color: black;
-
-  } */ 
+  
+  .input-group {
+      margin-top: 10px;
+      margin-bottom: 10px;
+      color:#fff
+      
+    
+     
+    }
+  
+  button {
+      background-color: #111213;
+      border-radius: 8px;
+      color: #fff;
+      cursor: pointer;
+      font-size: 1.2em;
+      letter-spacing: 0.21px;
+      line-height: 16px;
+      max-width: 255px;
+      padding: 20px 52px;
+      text-align: center;
+      transition-duration: 0.15s;
+      transition-property: background-color;
+      transition-timing-function: linear;
+      margin-top: 0.6em;
+      float: right;
+     position: relative;
+      top: 100px;
+    right: 20px;
+    }
+  
+    /* .navbar {
+      width: 100%;
+      height: 80px;
+      background-color: black;
+  
+    } */ 
