--- a/Assets/blog.css
+++ b/Assets/blog.css
@@ -1,67 +1,30 @@
+/* input[type=text] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  height: 100px;
+} */
 
+/* * {
+  box-sizing: border-box;
+} */
 
-input[type=text] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    height: 100px;
-  }
-
-* {
-    box-sizing: border-box;
+/* Custom CSS for the toggle button */
+#toggle:checked + .toggle-dot {
+  transform: translateX(100%);
+  background-color: #f6e05e; /* Change color for the dot when toggled */
 }
 
-
-.label {
-height: 26px;
-width: 50px;
-background-color: #111;
-display: flex;
-border-radius: 50px;
-align-items: center;
-justify-content: space-between;
-padding: 5px;
-float: right;
-position: relative;
-
+.toggle-line {
+  transition: background-color 0.3s;
 }
 
-.fa-moon {
-    color: #f1c40f;
+.toggle-dot {
+  transition: transform 0.3s, background-color 0.3s;
+  cursor: pointer; /* Add cursor pointer to make it clickable */
 }
 
-.fa-sun {
-  color:  #f39c12;
-}
-
-.ball {
-    background-color: #fff;
-    position: absolute;
-    height: 22px;
-    width: 22px;
-    top: 2px;
-    left: 2px;
-    border-radius: 50%;
-    transition: transform 0.2s linear;
-
-
-}
-
-.checkbox {
-  float: right;
-  opacity: 0;
-  position: absolute;
-}
-
-.checkbox:checked + .label .ball {
-
-  transform: translateX(24px);
-}
-
-body.dark {
- background-color: #292c35; 
-}
 .blogimg img {
   width: 400px;
   height: 400px;
