--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -3,74 +3,35 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-size: 100% 100vh;
-  
-  }
-  
-  
-  
-  .card {
-      /* display: block;
-      border-radius: 8px;
-      box-shadow: rgba(60, 64, 67, 0.3) 0 1px 2px 0,
-        rgba(60, 64, 67, 0.15) 0 1px 3px 1px;
-      margin: 40px auto;
-      padding: 20px;
-      width: 30vw;
-      text-align: left; */
-      
-        position: relative; 
-        width: 330px;
-        height: 370px;
-        background: #1c1c1c;
-        border-radius: 8px;
-        top: 150px;
-        left: 40%;
-        overflow: hidden;
-     
-  
-    }
-   h1 {
-    color: #8BC34A;
-     position: relative;
-     left: 40px;
-     
-     
-   } 
+}
 
-  
-  .input-group {
-      margin-top: 10px;
-      margin-bottom: 10px;
-      color:#fff
-      
-    
-     
-    }
-  
-  button {
-      background-color: #111213;
-      border-radius: 8px;
-      color: #fff;
-      cursor: pointer;
-      font-size: 1.2em;
-      letter-spacing: 0.21px;
-      line-height: 16px;
-      max-width: 255px;
-      padding: 20px 52px;
-      text-align: center;
-      transition-duration: 0.15s;
-      transition-property: background-color;
-      transition-timing-function: linear;
-      margin-top: 0.6em;
-      float: right;
-     position: relative;
-      top: 100px;
-    right: 20px;
-    }
-  
-    /* .navbar {
-      width: 100%;
-      height: 80px;
-      background-color: black;
-  
-    } */ 
+.card {
+  position: relative;
+  z-index: 1;
+  width: 300px; 
+  height: 500px; 
+  left: 600px;
+  top:200px;
+}
+
+.input-field {
+  width: 100%;
+}
+
+/* Ensure input elements are accessible */
+input,
+textarea,
+button {
+  position: relative;
+  z-index: 2;
+}
+
+/* Add a higher z-index to input-group to ensure input fields are accessible */
+.input-group {
+  position: relative;
+  z-index: 2;
+}
+.input-field {
+  width: 100%;
+  color: black; /* Add this line to set text color to black */
+}
